--- a/addressbook-selenium-tests/test-output/old/Default suite/methods.html
+++ b/addressbook-selenium-tests/test-output/old/Default suite/methods.html
@@ -1,14 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6692b5">  <td>14/03/30 22:37:31</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.example.tests.TestBase@1db4c43]">&gt;&gt;setUp</td> 
+<tr bgcolor="75d6bc">  <td>14/04/15 01:27:12</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.example.tests.ContactCreationTests@171ccb0]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@17510567</td>   <td></td> </tr>
-<tr bgcolor="826b75">  <td>14/03/30 22:37:36</td>   <td>4752</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupCreationTests.testEmptyGroupCreation()[pri:0, instance:com.example.tests.GroupCreationTests@1765ab3]">testEmptyGroupCreation</td> 
+<tr bgcolor="7e9862">  <td>14/04/15 01:27:16</td>   <td>4191</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactCreationTests.testContactCreation()[pri:0, instance:com.example.tests.ContactCreationTests@171ccb0]">testContactCreation</td> 
   <td>main@17510567</td>   <td></td> </tr>
-<tr bgcolor="826b75">  <td>14/03/30 22:37:38</td>   <td>6504</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupCreationTests.testNonEmptyGroupCreation()[pri:0, instance:com.example.tests.GroupCreationTests@1765ab3]">testNonEmptyGroupCreation</td> 
-  <td>main@17510567</td>   <td></td> </tr>
-<tr bgcolor="9ce184">  <td>14/03/30 22:37:39</td>   <td>7975</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactCreationTests.testUntitled()[pri:0, instance:com.example.tests.ContactCreationTests@131b810]">testUntitled</td> 
-  <td>main@17510567</td>   <td></td> </tr>
-<tr bgcolor="6692b5">  <td>14/03/30 22:37:43</td>   <td>11163</td> <td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.example.tests.TestBase@1db4c43]">&lt;&lt;tearDown</td> 
+<tr bgcolor="75d6bc">  <td>14/04/15 01:27:20</td>   <td>7638</td> <td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.example.tests.ContactCreationTests@171ccb0]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@17510567</td>   <td></td> </tr>
 </table>
