--- a/addressbook-selenium-tests/test-output/old/Default suite/methods.html
+++ b/addressbook-selenium-tests/test-output/old/Default suite/methods.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="75d6bc">  <td>14/04/15 01:27:12</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.example.tests.ContactCreationTests@171ccb0]">&gt;&gt;setUp</td> 
+<tr bgcolor="9875d1">  <td>14/04/23 23:44:33</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.example.tests.ContactModificationTests@3c58a9]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@17510567</td>   <td></td> </tr>
-<tr bgcolor="7e9862">  <td>14/04/15 01:27:16</td>   <td>4191</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactCreationTests.testContactCreation()[pri:0, instance:com.example.tests.ContactCreationTests@171ccb0]">testContactCreation</td> 
+<tr bgcolor="7a879c">  <td>14/04/23 23:44:38</td>   <td>4357</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactModificationTests.modifySomeContact(com.example.tests.ContactData)[pri:0, instance:com.example.tests.ContactModificationTests@3c58a9]">modifySomeContact</td> 
   <td>main@17510567</td>   <td></td> </tr>
-<tr bgcolor="75d6bc">  <td>14/04/15 01:27:20</td>   <td>7638</td> <td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.example.tests.ContactCreationTests@171ccb0]">&lt;&lt;tearDown</td> 
+<tr bgcolor="7a879c">  <td>14/04/23 23:44:42</td>   <td>8704</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactModificationTests.modifySomeContact(com.example.tests.ContactData)[pri:0, instance:com.example.tests.ContactModificationTests@3c58a9]">modifySomeContact</td> 
+  <td>main@17510567</td>   <td></td> </tr>
+<tr bgcolor="9875d1">  <td>14/04/23 23:44:46</td>   <td>12416</td> <td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.example.tests.ContactModificationTests@3c58a9]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@17510567</td>   <td></td> </tr>
 </table>
